refactor: update integration documentation by correcting page titles and removing outdated image assets; enhance clarity in content structure

--- a/content/docs/introduction/environment.zh.mdx
+++ b/content/docs/introduction/environment.zh.mdx
@@ -24,9 +24,9 @@ VibeAny 配置环境变量有两种方式：
 | -------- | ------- |
 | DATABASE_URL  | 数据库连接 URL    |
 
-### 鉴权
+### 身份鉴权
 
-在鉴权设置文档中查看更加详细的配置说明
+在身份鉴权设置文档中查看更加详细的配置说明
 
 | 变量   | 描述 |
 | -------- | ------- |
