refactor: remove outdated blog, changelog, and roadmap documentation; update Fumadocs link and clean up related meta files for improved clarity and maintainability

--- a/content/docs/index.zh.mdx
+++ b/content/docs/index.zh.mdx
@@ -41,7 +41,7 @@ Hi, 我是 Jayden，一名全栈开发工程师。过去一段时间里，我和
   { name: "Better Auth", desc: "现代认证方案", href: "https://www.better-auth.com" },
   { name: "Stripe", desc: "支付集成", href: "https://stripe.com" },
   { name: "Intlayer", desc: "国际化方案", href: "https://intlayer.org" },
-  { name: "Fumadocs", desc: "MDX 文档框架", href: "https://fumadocs.vercel.app" },
+  { name: "Fumadocs", desc: "MDX 文档框架", href: "https://fumadocs.dev" },
   { name: "Motion", desc: "动画库", href: "https://motion.dev" },
   { name: "Zod", desc: "数据验证", href: "https://zod.dev" },
   { name: "Zustand", desc: "状态管理", href: "https://zustand.docs.pmnd.rs" },
