fix: update GitHub links and social media URLs

--- a/content/blog/welcome-to-vibeany.mdx
+++ b/content/blog/welcome-to-vibeany.mdx
@@ -29,7 +29,7 @@ Follow these simple steps to get your AI application up and running quickly:
 
 ```bash
 # Clone the repository
-git clone https://github.com/jiahao-jayden/vibe-any
+git clone https://github.com/jiahao-jayden/vibe-any-tanstack
 
 # Install dependencies
 bun i
@@ -77,7 +77,7 @@ Browse our [complete documentation](/docs) to unlock more possibilities:
 
 VibeAny adopts an open-source collaborative model, and we look forward to your valuable feedback and code contributions:
 
-- [GitHub Repository](https://github.com/vibe-any/vibeany) - View source code, submit issues
+- [GitHub Repository](https://github.com/jiahao-jayden/vibe-any-tanstack) - View source code, submit issues
 - [Discord Developer Community](https://discord.gg/vibeany) - Real-time communication and technical discussions
 - [Twitter Updates](https://x.com/vibe_any) - Get the latest news and updates
 
